# MultiModalCV

./: .gitignore  README.md  pyproject.toml  start_app.bat
docs/: demo_guide.md  roadmap.md
interfaces/cli/: README.md
interfaces/streamlit_app/: README.md  api_client.py  app.py
multimodalcv/: __init__.py
multimodalcv/api/: app.py
multimodalcv/auth/: __init__.py  models.py  security.py  store.py
multimodalcv/cli/: __init__.py  analyze.py  create_admin.py  demo.py  serve.py  video.py
multimodalcv/commands/: __init__.py  interpreter.py  llm_interpreter.py  models.py  parser.py
multimodalcv/config/: __init__.py  zones.py
multimodalcv/core/: __init__.py  models.py
multimodalcv/detection/: __init__.py  base.py  fake.py  yolo.py
multimodalcv/pipeline/: __init__.py  analysis.py
multimodalcv/reporting/: __init__.py  annotate.py  frame_writer.py  json_report.py  summary_report.py  video_report.py
multimodalcv/rules/: __init__.py  engine.py  frame_counts.py  occupancy.py  zone_events.py
multimodalcv/segmentation/: __init__.py
multimodalcv/tracking/: __init__.py  base.py  fake.py  iou.py
multimodalcv/video/: __init__.py  reader.py
tests/unit/: test_analysis_pipeline.py  test_analyze_cli.py  test_annotate.py  test_api_app.py  test_auth_security.py  test_auth_store.py  test_command_interpreter.py  test_command_parser.py  test_create_admin_cli.py  test_demo_cli.py  test_detection.py  test_frame_counts.py  test_frame_writer.py  test_iou_tracker.py  test_json_report.py  test_llm_interpreter.py  test_models.py  test_occupancy.py  test_rule_engine.py  test_serve_cli.py  test_streamlit_api_client.py  test_streamlit_app.py  test_summary_report.py  test_tracking.py  test_video_cli.py  test_video_reader.py  test_video_report.py  test_yolo_detector.py  test_zone_events.py  test_zones_config.py
