[project]
name = "multimodalcv"
version = "0.1.0"
description = "Text-controlled computer vision system for archived video analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python-headless>=4.10",
]

[project.scripts]
multimodalcv-demo = "multimodalcv.cli.demo:main"

[tool.setuptools.packages.find]
include = ["multimodalcv*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests that use archived video samples or multiple modules",
    "slow: tests that load models, process full videos, or require significant runtime",
    "gpu: tests that require GPU acceleration",
]
