[project]
name = "multimodalcv"
version = "0.1.0"
description = "Text-controlled computer vision system for archived video analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python-headless>=4.10",
]

[project.scripts]
multimodalcv-analyze = "multimodalcv.cli.analyze:main"
multimodalcv-demo = "multimodalcv.cli.demo:main"
multimodalcv-video = "multimodalcv.cli.video:main"

[tool.setuptools.packages.find]
include = ["multimodalcv*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
yolo = [
    "ultralytics>=8.0",
]
ui = [
    "pandas>=2.0",
    "streamlit>=1.35",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests that use archived video samples or multiple modules",
    "slow: tests that load models, process full videos, or require significant runtime",
    "gpu: tests that require GPU acceleration",
]
